--- a/index.css
+++ b/index.css
@@ -384,8 +384,43 @@ a {
 .block_footer {
     display: block;
 }
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+@media only screen and (min-width : 1250px) and (max-width: 1865px) {
+    /* Styles pour cette Media Queries */
+    aside {
+        min-width: 350px;
+        width: auto;
+    }
+    .card_main {
+        max-width: 250px;
+        width: auto;
+        min-width: 230px;
+    }
+    .block_un_article {
+        margin: 0px 35px 0px 35px;
+    }
+    .block_deux_article {
+        margin-left: 35px;
+    }
+    .card_aside {
+        margin: 15px;
+    }
+    .card_article_fort, .card_article_iles, .card_article_eglise, .card_article_longchamp {
+        width: auto;
+        min-width: 250px;
+        max-width: 300px;
+    }
+    #port, #parc_calanques {
+        height: auto;
+        min-height: 360px;
+    }
+    .card_article_alone p {
+        margin-top: 20px;
+    }
+    .card_article_longchamp p, .card_article_eglise p {
+        height: 30px;
+    }
+}
+@media only screen and (min-width: 576px) and (max-width: 1249px) {
     /*Responsive tablette*/
     body {
         grid-template-areas: "header header header header" "section section section section" "aside aside aside aside" "main main main main" "article article article article" "footer footer footer footer";
@@ -396,12 +431,9 @@ a {
         display: flex;
     }
     header nav {
-        display: flex;
-        margin: auto;
-        width: auto;
+        width: 100%;
         flex-wrap: wrap-reverse;
-        min-width: 680px;
-        max-width: 800px;
+        justify-content: center;
     }
     header nav p {
         padding: 0px 50px;
@@ -456,16 +488,10 @@ a {
         margin-top: 20px;
     }
     article {
-        grid-area: article;
-        min-width: 768px;
-        max-width: 1024px;
+
         width: auto;
         margin: auto;
         margin-top: 20px;
-    }
-    article h3 {
-        margin: auto;
-        margin-left: 16em;
     }
     footer {
         display: block;
@@ -478,16 +504,11 @@ a {
     #inscrip {
         border-bottom: none;
     }
-    .inscription {
-        margin-left: 35em;
-    }
     .inscription:hover {
         color: #0082ff;
     }
     #hebergements {
         text-align: center;
-        min-width: 384px;
-        max-width: 400px;
         width: 100%;
     }
     #activites {
@@ -495,7 +516,7 @@ a {
         width: 100%;
     }
     #reservia {
-        margin-top: -3%;
+        margin-top: -1%;
         position: absolute;
     }
     #animaux {
@@ -519,16 +540,14 @@ a {
         margin-top: 12px;
     }
     .SearchBar {
-        width: 80%;
-        margin: auto;
+        width: 95%;
+        margin: 15px;
     }
     .SearchBar input[type=text] {
-        margin-top: 0px;
-        height: 30px;
-        width: 80%;
+        width: 70%;
     }
     .SearchBar input[type=button] {
-        width: 16%;
+        width: 25%;
     }
 
     .card_aside {
@@ -621,12 +640,12 @@ a {
         width: 100%;
     }
     .block_footer {
-        margin-top: 45px;
-        margin-left: 300px;
+        margin:inherit;
+        margin-left: 60px;
     }
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 767px) {
+@media only screen and (min-width: 320px) and (max-width: 575px) {
     /*Responsive mobile*/
     body {
         grid-template-areas: "header header header header" "section section section section" "aside aside aside aside" "main main main main" "article article article article" "footer footer footer footer";
